scripts/nullaway/annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8.txt
../annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:79: error: [NullAway] dereferenced expression string is @Nullable
        for (int i = 0, len = string.length(); i < len; i++) {
                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:146: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return toJSONArray(new JSONTokener(string));
        ^
    (see http://t.uber.com/nullaway )
../annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:210: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picture.java:52: error: [NullAway] dereferenced expression swapimage is @Nullable
		if (!swapimage.isDone()) throw new StillLoadingException();
		              ^
    (see http://t.uber.com/nullaway )
../annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picture.java:92: error: [NullAway] dereferenced expression listener is @Nullable
			listener.actionPerformed(new ActionEvent(this, 0, "loading finished"));
			        ^
    (see http://t.uber.com/nullaway )
../annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picture.java:101: error: [NullAway] dereferenced expression swapimage is @Nullable
			if (swapimage.isDone()) return swapimage.get();
			             ^
    (see http://t.uber.com/nullaway )
../annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/PicViewGUI.java:88: error: [NullAway] initializer method does not guarantee @NonNull field picturebox (line 63) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public PicViewGUI() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/PicViewGUI.java:299: error: [NullAway] dereferenced expression this.Fullscreen is @Nullable
			this.Fullscreen.remove(picturebox);
			               ^
    (see http://t.uber.com/nullaway )
../annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picturehandler.java:126: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			if (count() == 0) return null;
			                  ^
    (see http://t.uber.com/nullaway )
../annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/TitleInformer.java:49: error: [NullAway] dereferenced expression window is @Nullable
		window.setTitle(title.toString());
		      ^
    (see http://t.uber.com/nullaway )
../annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/MenuScroller/MenuScroller.java:423: error: [NullAway] assigning @Nullable expression to @NonNull field
      menu = null;
           ^
    (see http://t.uber.com/nullaway )
../annotator/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/MenuScroller/MenuScroller.java:507: error: [NullAway] enhanced-for expression menuItems is @Nullable
      for (Component component : menuItems) {
                                 ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
